--- a/themes/thenews/scss/_variables.scss
+++ b/themes/thenews/scss/_variables.scss
@@ -48,8 +48,52 @@ $theme-colors: (
      "dark":                #efefef
 );
 
+// scss-docs-start theme-text-variables
+$primary-text-emphasis:   shade-color($primary, 60%) !default;
+$secondary-text-emphasis: shade-color($secondary, 60%) !default;
+$success-text-emphasis:   shade-color($success, 60%) !default;
+$info-text-emphasis:      shade-color($info, 60%) !default;
+$warning-text-emphasis:   shade-color($warning, 60%) !default;
+$danger-text-emphasis:    shade-color($danger, 60%) !default;
+$light-text-emphasis:     $gray-700 !default;
+$dark-text-emphasis:      $gray-700 !default;
+// scss-docs-end theme-text-variables
+
+// scss-docs-start theme-bg-subtle-variables
+$primary-bg-subtle:       tint-color($primary, 80%) !default;
+$secondary-bg-subtle:     tint-color($secondary, 80%) !default;
+$success-bg-subtle:       tint-color($success, 80%) !default;
+$info-bg-subtle:          tint-color($info, 80%) !default;
+$warning-bg-subtle:       tint-color($warning, 80%) !default;
+$danger-bg-subtle:        tint-color($danger, 80%) !default;
+$light-bg-subtle:         mix($gray-100, $white) !default;
+$dark-bg-subtle:          $gray-400 !default;
+// scss-docs-end theme-bg-subtle-variables
+
+// scss-docs-start theme-border-subtle-variables
+$primary-border-subtle:   tint-color($primary, 60%) !default;
+$secondary-border-subtle: tint-color($secondary, 60%) !default;
+$success-border-subtle:   tint-color($success, 60%) !default;
+$info-border-subtle:      tint-color($info, 60%) !default;
+$warning-border-subtle:   tint-color($warning, 60%) !default;
+$danger-border-subtle:    tint-color($danger, 60%) !default;
+$light-border-subtle:     $gray-200 !default;
+$dark-border-subtle:      $gray-500 !default;
+// scss-docs-end theme-border-subtle-variables
+
 // Options
+$enable-dark-mode:            true !default;
+$color-mode-type:             data !default; // `data` or `media-query`
+
+// Prefix for :root CSS variables
+
+$prefix:                      bs- !default;
+
 // Spacing
+
+// Components
+$component-active-color:      $white !default;
+$component-active-bg:         $primary !default;
 
 // Body
 $body-bg: #fbfbfb; //#fff;
@@ -64,6 +108,9 @@ $link-shade-percentage:                   20% !default; // Bootstrap 5.3
 $border-radius:               0rem;
 $border-radius-lg:            .2rem;
 $border-radius-sm:            .1rem;
+
+$border-width:                1px !default;
+$box-shadow-inset:            inset 0 1px 2px rgba($black, .075) !default;
 
 // Fonts
 $font-family-serif: 'Source Serif Pro', serif;
@@ -82,29 +129,71 @@ $btn-border-radius: 5px;
 
 //$btn-primary-color: #ffffff;
 //$btn-primary-bg: #3676c4;
+$input-btn-border-width:      var(--#{$prefix}border-width) !default;
 
 // Forms
-//$input-border: #dddddd;
-// Dropdowns
+$input-bg:                              var(--#{$prefix}body-bg) !default;
+$input-disabled-color:                  null !default;
+$input-disabled-bg:                     var(--#{$prefix}secondary-bg) !default;
+$input-disabled-border-color:           null !default;
+
+$input-color:                           var(--#{$prefix}body-color) !default;
+$input-border-color:                    var(--#{$prefix}border-color) !default;
+$input-border-width:                    $input-btn-border-width !default;
+$input-box-shadow:                      $box-shadow-inset !default;
+
+
 // Navs
 // Navbar
-$navbar-dark-color: #333; // unintuitive but has to match class of div in tpl
-$navbar-dark-active-color: $navbar-dark-color;
-$navbar-dark-active-hover-color: $navbar-dark-active-color;
-$navbar-dark-bg: #efefef; // ditto
-$navbar-dark-hover-color: #ff5c1a;
-$navbar-nav-link-padding-x: 2rem;
-
-$navbar-light-color: $navbar-dark-color;
-$navbar-light-hover-color: $navbar-dark-hover-color;
-
+//$navbar-dark-color: #efefef; // unintuitive but has to match class of div in tpl
+//$navbar-dark-active-color: $navbar-dark-color;
+//$navbar-dark-active-hover-color: $navbar-dark-active-color;
+//$navbar-dark-bg: #1a1d20; // ditto
+//$navbar-dark-hover-color: #ff5c1a;
+//$navbar-nav-link-padding-x: 2rem;
+//
+//$navbar-light-color: #1a1d20;
+//$navbar-light-hover-color: $navbar-dark-hover-color;
+//
 //$navbar-dark-border: darken($navbar-dark-bg, 6.5%);
-
+//
 //$navbar-dark-hover-color: darken(#fff, 10%);
 //$navbar-dark-hover-bg: #3270bd;
 //$navbar-dark-active-color: #ffffff;
 //$navbar-dark-active-bg: #3270bd;
 //$navbar-dark-disabled-color: #cccccc;
+
+$navbar-light-color:                rgba(var(--#{$prefix}emphasis-color-rgb), .65) !default;
+$navbar-light-hover-color:          rgba(var(--#{$prefix}emphasis-color-rgb), .8) !default;
+$navbar-light-active-color:         rgba(var(--#{$prefix}emphasis-color-rgb), 1) !default;
+$navbar-light-disabled-color:       rgba(var(--#{$prefix}emphasis-color-rgb), .3) !default;
+
+$navbar-dark-color:                 rgba($white, .55) !default;
+$navbar-dark-hover-color:           rgba($white, .75) !default;
+$navbar-dark-active-color:          $white !default;
+$navbar-dark-disabled-color:        rgba($white, .25) !default;
+
+// Dropdowns
+$dropdown-color:                    var(--#{$prefix}body-color) !default;
+$dropdown-bg:                       var(--#{$prefix}body-bg) !default;
+$dropdown-link-color:               var(--#{$prefix}body-color) !default;
+$dropdown-link-hover-color:         $dropdown-link-color !default;
+$dropdown-link-hover-bg:            var(--#{$prefix}tertiary-bg) !default;
+
+$dropdown-link-active-color:        $component-active-color !default;
+$dropdown-link-active-bg:           $component-active-bg !default;
+
+$dropdown-link-disabled-color:      var(--#{$prefix}tertiary-color) !default;
+
+$dropdown-dark-color:               $gray-300 !default;
+$dropdown-dark-bg:                  $gray-800 !default;
+$dropdown-dark-link-color:          $dropdown-dark-color !default;
+$dropdown-dark-link-hover-color:    $white !default;
+$dropdown-dark-link-hover-bg:       rgba($white, .15) !default;
+$dropdown-dark-link-active-color:   $dropdown-link-active-color !default;
+$dropdown-dark-link-active-bg:      $dropdown-link-active-bg !default;
+$dropdown-dark-link-disabled-color: $gray-500 !default;
+
 
 // Pagination
 // Jumbotron
